# RotS_Live

./: .clang-format  .gitignore  AGENTS.md  CHANGE_NOTES  Cargo.toml  MTRand.cpp  MTRand.h  Makefile  README.md  act_comm.cc  act_info.cc  act_move.cc  act_obj1.cc  act_obj2.cc  act_offe.cc  act_othe.cc  act_wiz.cc  ban.cc  base_utils.h  big_brother.cpp  big_brother.h  boards.cc  boards.h  char_utils.cpp  char_utils.h  char_utils_combat.cpp  char_utils_combat.h  clerics.cc  color.cc  color.h  combat_manager.cpp  combat_manager.h  comm.cc  comm.h  config.cc  consts.cc  cross_platform_issues.md  db.cc  db.h  delayed_command_interpreter.cpp  (+52 more)
code documentation/: Big Brother Code Breakdown.rtf  messages
game design docs/: class direction.txt  money_ideas.md  mud_ideas.md  special_mobs.md
game design docs/races/: beornings.md  harads.md  (+1 more)
levgen/: Levscript  Levscript1  Makefile  config.c  config.h  gwalin_maze.lev  gwalin_maze.lev.old  levgen.c  makmaz  maz.c  maz.h  mazelog  mirk_maze_280.lev  mirk_maze_281.lev  mirk_maze_291.lev  mirk_maze_292.lev  mirk_maze_294.lev  mirk_maze_level1.lev  mirk_maze_level2.lev  newmaz.lev  old_maze_lv1.lev  old_maze_lv2.lev  old_maze_lv3.lev  old_maze_lv4.lev  orcish_maze_level1.lev  orcish_maze_level2.lev  orcish_maze_level3.lev  structs.h  wld.c  wld.h  zon.c  zon.h
proxy/: Cargo.toml
proxy/src/: main.rs
release-notes/: README.md
src/: CHANGE_NOTES  CMakeLists.txt  Makefile  TODO  act_comm.cc  act_comm.cpp  act_info.cc  act_info.cpp  act_move.cc  act_move.cpp  act_obj1.cc  act_obj1.cpp  act_obj2.cc  act_obj2.cpp  act_offe.cc  act_offe.cpp  act_othe.cc  act_othe.cpp  act_soci.cc  act_soci.cpp  act_wiz.cc  act_wiz.cpp  ban.cc  ban.cpp  base_utils.h  battle_mage_handler.cpp  big_brother.cpp  big_brother.h  boards.cc  boards.cpp  boards.h  char_utils.cpp  char_utils.h  char_utils_combat.cpp  char_utils_combat.h  clerics.cc  clerics.cpp  clock.cpp  clock.h  color.cc  (+112 more)
src/tests/: CharPlayerDataBuilder.cpp  CharPlayerDataBuilder.h  Makefile  ObjFlagDataBuilder.cpp  ObjFlagDataBuilder.h  gtest_main.cpp  obj_flag_data_tests.cpp
src/tests/builders/: AffectedTypeBuilder.cpp  CharAbilityDataBuilder.cpp  CharPlayerDataBuilder.h  CharPointDataBuilder.cpp  CharPointDataBuilder.h  CharSpecial2DataBuilder.cpp  CharSpecial2DataBuilder.h  CharSpecialDataBuilder.cpp  CharSpecialDataBuilder.h  MemoryRecBuilder.cpp  ObjDataBuilder.cpp  ObjDataBuilder.h  RoomBleedDataBuilder.cpp  RoomDataBuilder.cpp  RoomDataExtensionBuilder.cpp  RoomDirectionDataBuilder.cpp  RoomDirectionDataBuilder.h  RoomTrackDataBuilder.cpp  affected_type_builder.cpp  affected_type_builder.h  char_ability_data_builder.cpp  char_ability_data_builder.h  char_player_data_builder.cpp  char_point_data_builder.cpp  char_special2_data_builder.cpp  char_special_data_builder.cpp  memory_rec_builder.cpp  memory_rec_builder.h  obj_data_builder.cpp  obj_flag_data_builder.cpp  obj_flag_data_builder.h  room_bleed_data_builder.cpp  room_bleed_data_builder.h  room_data_builder.cpp  room_data_builder.h  room_data_extension_builder.cpp  room_data_extension_builder.h  room_direction_data_builder.cpp  room_track_data_builder.cpp  room_track_data_builder.h
(+46 files in other folders)
