[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
env_logger = "0.10"
futures-util = "0.3"
log = "0.4"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.19", default-features = false, features = ["handshake"] }
